Fixed: HTML validation errors. Style: button widths descreased, paddings added. feat: <em> added below textarea and url input. Accessibility: Colours changed for better contrast, page tested for improved accessibility

--- a/static/scss/add-whiskey.scss
+++ b/static/scss/add-whiskey.scss
@@ -92,17 +92,32 @@ $color5: #1d1611;
         button {
             margin-top: 1rem;
             margin-bottom: 1rem;
-            width: 10rem;
+            width: 15rem;
             height: 3rem;
-            border-radius: 1rem;
-            border: 0.1rem solid rgba(0, 0, 0, 0.8);
             margin-left: auto;
+            font-size: 1.2rem;
             margin-right: auto;
         }
         a {
             margin-top: 1rem;
             margin-bottom: 0.5rem;
             font-size: 1.2rem;
+            width: 15rem;
+            height: 3rem;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        em {
+            font-weight: 0.9rem;
+            margin-bottom: 1rem;
+            display: block;
+            margin-top: 0.5rem;
+            padding-left: 1rem;
+            padding-right: 1rem;
+        }
+        #link {
+            color: #0063cc;
+            width: 18rem;
         }
     }
 }
